--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "idx": "^2.5.6"
   },
   "scripts": {
-    "dev": "node_modules/.bin/nodemon app/index.js",
+    "dev": "nodemon app/index.js",
     "start": "node app/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
